--- a/www/css/style.css
+++ b/www/css/style.css
@@ -348,19 +348,19 @@ body {
 }
 .add-event {
   position: absolute;
-  bottom: 30px;
+  bottom: 15%;
   right: 30px;
-  width: 40px;
-  height: 40px;
+  width: 50px;
+  height: 50px;
   display: flex;
   align-items: center;
   justify-content: center;
-  font-size: 1rem;
+  font-size: 0rem;
   color: #878895;
   border: 2px solid #878895;
-  opacity: 0.5;
+  opacity: .7;
   border-radius: 50%;
-  background-color: transparent;
+  background-color: white;
   cursor: pointer;
 }
 .add-event:hover {
